메인 메뉴 버튼 되돌림.

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
           </div>
           <div class="modal-body border-bottom">
             <h5>File</h5>
-            <div class="d-grid gap-1 grid-columns-3">
+            <div class="d-grid gap-1 grid-columns-2">
               <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-new">
                 <div class="fs-4"><i class="bi bi-file-earmark-plus"></i></div>
                 <div class="text-truncate">NEW</div>
@@ -452,19 +452,19 @@
                 <div class="fs-4"><i class="bi bi-folder2-open"></i></div>
                 <div class="text-truncate">OPEN</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-download">
+              <button type="button" class="w-100 min-w-0 btn btn-lg btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-download">
                 <div class="fs-4"><i class="bi bi-file-earmark-arrow-down"></i></div>
                 <div class="text-truncate">DOWNLOAD</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-upload">
+              <button type="button" class="w-100 min-w-0 btn btn-lg btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-upload">
                 <div class="fs-4"><i class="bi bi-cloud-upload"></i></div>
                 <div class="text-truncate">UPLOAD</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" onclick="editor.previewDocument()">
+              <button type="button" class="w-100 min-w-0 btn btn-lg btn-secondary" onclick="editor.previewDocument()">
                 <div class="fs-4"><i class="bi bi-image"></i></div>
                 <div class="text-truncate">PREVIEW</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" onclick="editor.closeDocument()">
+              <button type="button" class="w-100 min-w-0 btn btn-lg btn-danger" onclick="editor.closeDocument()">
                 <div class="fs-4"><i class="bi bi-x-circle"></i></div>
                 <div class="text-truncate">CLOSE</div>
               </button>
@@ -572,7 +572,7 @@
             </div>
           </div>
           <div class="modal-body">
-            <div><img id="img-preview" class="my-3 shadow" src="" alt="image preview"></div>
+            <div><img id="img-preview" class="shadow" src="" alt="image preview"></div>
           </div>
         </div>
       </div>
