wc3.zip w지원되도록 개조중

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
   <link rel="stylesheet" href="third_party/ui_ColorPalette/ColorPalette.css">
   <script src="third_party/ui_ColorPalette/ColorPalette.js"></script>
   
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+
+    
   <style>
     .colorPalette-tab-hsl {
       max-height: 300px;
