download wc3.zip

--- a/index.html
+++ b/index.html
@@ -616,21 +616,27 @@
                       <option value="0">0</option>
                     </select>
                   </div>
-                  <div class="d-grid gap-3 " style="grid-template-columns: repeat(2 , 1fr);;">
+                  <div class="d-grid gap-3 " style="grid-template-columns: repeat(2 , 1fr); ">
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='png';"> <i class="bi bi-filetype-png"></i> Download .png</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='png';"> <i class="bi bi-filetype-png"></i> .png</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> quality를 적용할 수 없습니다.</div>
                     </div>
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='jpg';"> <i class="bi bi-filetype-jpg"></i> Download .jpg</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='jpg';"> <i class="bi bi-filetype-jpg"></i> .jpg</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 손실 압축.</div>
                     </div>
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='webp';"> <i class="bi bi-image"></i> Download .webp</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='webp';"> <i class="bi bi-image"></i> .webp</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 손실 압축. 브라우저 지원 확인 필요</div>
                     </div>
+                  </div>
+                  <div class="d-grid gap-3 " style="grid-template-columns: repeat(2 , 1fr); ">
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='wc3.json';"> <i class="bi bi-filetype-json"></i> Download .wc3.json</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='wc3.json';"> <i class="bi bi-filetype-json"></i> .wc3.json</button>
+                      <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 레이어 정보가 같이 저장됩니다.</div>
+                    </div>
+                    <div>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='wc3.zip';"> <i class="bi bi-file-earmark-zip"></i> .wc3.zip</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 레이어 정보가 같이 저장됩니다.</div>
                     </div>
                   </div>
