image 파일과 .wc3.json , .wc3.zip 파일이 지원됩니다.

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 <div class="input-group input-group-lg">
                   <input type="file" class="form-control" name="openfile" accept=".wc3.json,.wc3.zip,image/*">
                 </div>
-                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json 파일이 지원됩니다.</div>
+                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json , .wc3.zip 파일이 지원됩니다.</div>
                 <div class="text-end my-1">
                   <button type="submit" class="btn btn-primary" ><i class="bi bi-file-earmark-arrow-up"></i> OPEN</button>
                 </div>
@@ -552,7 +552,7 @@
                 <div class="input-group input-group-lg">
                   <input type="text" class="form-control" name="openfile" placeholder="https://-- or /--">
                 </div>
-                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json 파일이 지원됩니다.</div>
+                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json , .wc3.zip  파일이 지원됩니다.</div>
                 <div class="form-text text-end"><i class="bi bi-info-circle"></i> 같은 도메인의 URL만 지원합니다.</div>
                 <div class="text-end my-1">
                   <button type="submit" class="btn btn-primary" ><i class="bi bi-file-earmark-arrow-up"></i> OPEN</button>
