--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                   <button type="submit" class="btn btn-lg btn-primary"> UPLOAD </button>
                 </div>
               </form>
-              <form action="" onsubmit="editor.uploadDocument('wc3.json',this.filename.value).then(()=>{ console.log('uploadDocument 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); alert(e.message); });return false;">
+              <form action="" onsubmit="editor.uploadDocument('wc3.json',this.filename.value).then(()=>{ alert('uploadDocument 완료\n미리보기가 지원되지 않는 확장자.');console.log('uploadDocument 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); alert(e.message); });return false;">
                 <div class="input-group">
                   <span class="input-group-text"><i class="bi bi-filetype-json"></i></span>
                   <input type="text" class="form-control filename" name="filename" value="" required>
@@ -675,7 +675,7 @@
                 </div>
                 <div class="form-text text-end mt-0 mb-2"><i class="bi bi-info-circle"></i> 레이어 정보가 같이 저장됩니다.</div>
               </form>
-              <form action="" onsubmit="editor.uploadDocument('wc3.zip',this.filename.value).then(()=>{ console.log('uploadDocument 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); alert(e.message); });return false;">
+              <form action="" onsubmit="editor.uploadDocument('wc3.zip',this.filename.value).then(()=>{ alert('uploadDocument 완료\n미리보기가 지원되지 않는 확장자.');console.log('uploadDocument 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); alert(e.message); });return false;">
                 <div class="input-group">
                   <span class="input-group-text"><i class="bi bi-filetype-json"></i></span>
                   <input type="text" class="form-control filename" name="filename" value="" required>
