--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
   <!-- //ui-transform-tool -->
   
   
-  
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="asset/fonts.css">
   <link rel="stylesheet" href="asset/style.css">
   
   
