웹 폰트 10종 적용

--- a/index.html
+++ b/index.html
@@ -829,26 +829,30 @@
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-type"></i> fontFamily</div>
                   <select name="fontFamily" class="form-select">
-                    <option value="sans-serif">sans-serif (기본 글꼴)</option>
-                    <option value="serif">serif</option>
-                    <option value="Arial">Arial</option>
-                    <option value="Verdana">Verdana</option>
-                    <option value="Helvetica">Helvetica</option>
-                    <option value="Times New Roman">Times New Roman</option>
-                    <option value="Georgia">Georgia</option>
-                    <option value="Courier New">Courier New</option>
-                    <option value="Lucida Console">Lucida Console</option>
-                    <option value="Trebuchet MS">Trebuchet MS</option>
-                    <option value="Impact">Impact</option>
-                    <option value="Comic Sans MS">Comic Sans MS</option>
-                    <option value="Tahoma">Tahoma</option>
-                    <option value="Palatino Linotype">Palatino Linotype</option>
-                    <option value="Garamond">Garamond</option>
-                    <option value="Brush Script MT">Brush Script MT</option>
-                    <option value="monospace">monospace</option>
-                    <option value="cursive">cursive</option>
-                    <option value="fantasy">fantasy</option>
-                    <option value="Black Han Sans">(WEB FONT)Black Han Sans</option>
+                    <optgroup label="SYSTEM(OS에서 제공)">
+                      <option value="sans-serif">sans-serif (기본 글꼴)</option>
+                      <option value="serif">serif</option>
+                      <option value="Arial">Arial</option>
+                      <option value="Verdana">Verdana</option>
+                      <option value="Helvetica">Helvetica</option>
+                      <option value="Times New Roman">Times New Roman</option>
+                      <option value="Georgia">Georgia</option>
+                      <option value="Courier New">Courier New</option>
+                      <option value="Lucida Console">Lucida Console</option>
+                      <option value="Trebuchet MS">Trebuchet MS</option>
+                      <option value="Impact">Impact</option>
+                      <option value="Comic Sans MS">Comic Sans MS</option>
+                      <option value="Tahoma">Tahoma</option>
+                      <option value="Palatino Linotype">Palatino Linotype</option>
+                      <option value="Garamond">Garamond</option>
+                      <option value="Brush Script MT">Brush Script MT</option>
+                      <option value="monospace">monospace</option>
+                      <option value="cursive">cursive</option>
+                      <option value="fantasy">fantasy</option>
+                    </optgroup>
+                    <optgroup label="WEB-FONT" id="optgroup-web-font" >
+                      <option value="Black Han Sans">(WEB FONT)Black Han Sans</option>
+                    </optgroup>
                   </select>
                 </div>
                 <div>
