--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -114,6 +114,11 @@
       })
     </script>
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../../asset/fonts.css">
+
     <link rel="stylesheet" href="../../asset/style.css">
     <!-- 부트스트랩 커스텀용 -->
     <link rel="stylesheet" href="../../asset/bootstrap-custom.css">
@@ -153,6 +158,18 @@
 
         
         UiInputStepper.initDataValue()
+
+
+        //-- 폰트 목록 동기화
+        // console.log(HtmlUtil.getFontMap());
+        const optgroupWebFont = document.querySelector('#optgroup-web-font');
+        optgroupWebFont.innerHTML = '';
+        Wc.HtmlUtil.getFontMap().values().forEach((font)=>{
+          if(font.family=='bootstrap-icons'){return;} //부트스트랩 아이콘은 제외. 일반 폰트가 아님.
+          // console.log(font);  
+          const option = new Option(font.family,font.family,false,false);
+          optgroupWebFont.append(option)
+        })
 
         
       })
@@ -228,7 +245,7 @@
               document.querySelector('#text-frame').style.padding = textlayer.textConfig.padding
               Wc.HtmlUtil.applyStyleObject(document.querySelector('#text-frame-content'),textlayer.textConfig.exportToStyleObject())
             " 
-            onchange="this.oninput(event);">
+            x-onchange="this.oninput(event);">
             <div class="div-text-config grid-auto-fill grid-auto-fill-260px gap-3">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
@@ -241,26 +258,30 @@
               <div>
                 <div class="form-label mb-0"><i class="bi bi-type"></i> fontFamily</div>
                 <select name="fontFamily" class="form-select">
-                  <option value="sans-serif">sans-serif (기본 글꼴)</option>
-                  <option value="serif">serif</option>
-                  <option value="Arial">Arial</option>
-                  <option value="Verdana">Verdana</option>
-                  <option value="Helvetica">Helvetica</option>
-                  <option value="Times New Roman">Times New Roman</option>
-                  <option value="Georgia">Georgia</option>
-                  <option value="Courier New">Courier New</option>
-                  <option value="Lucida Console">Lucida Console</option>
-                  <option value="Trebuchet MS">Trebuchet MS</option>
-                  <option value="Impact">Impact</option>
-                  <option value="Comic Sans MS">Comic Sans MS</option>
-                  <option value="Tahoma">Tahoma</option>
-                  <option value="Palatino Linotype">Palatino Linotype</option>
-                  <option value="Garamond">Garamond</option>
-                  <option value="Brush Script MT">Brush Script MT</option>
-                  <option value="monospace">monospace</option>
-                  <option value="cursive">cursive</option>
-                  <option value="fantasy">fantasy</option>
-                  <option value="Black Han Sans">(WEB FONT)Black Han Sans</option>
+                  <optgroup label="SYSTEM(OS에서 제공)">
+                    <option value="sans-serif">sans-serif (기본 글꼴)</option>
+                    <option value="serif">serif</option>
+                    <option value="Arial">Arial</option>
+                    <option value="Verdana">Verdana</option>
+                    <option value="Helvetica">Helvetica</option>
+                    <option value="Times New Roman">Times New Roman</option>
+                    <option value="Georgia">Georgia</option>
+                    <option value="Courier New">Courier New</option>
+                    <option value="Lucida Console">Lucida Console</option>
+                    <option value="Trebuchet MS">Trebuchet MS</option>
+                    <option value="Impact">Impact</option>
+                    <option value="Comic Sans MS">Comic Sans MS</option>
+                    <option value="Tahoma">Tahoma</option>
+                    <option value="Palatino Linotype">Palatino Linotype</option>
+                    <option value="Garamond">Garamond</option>
+                    <option value="Brush Script MT">Brush Script MT</option>
+                    <option value="monospace">monospace</option>
+                    <option value="cursive">cursive</option>
+                    <option value="fantasy">fantasy</option>
+                  </optgroup>
+                  <optgroup label="WEB-FONT" id="optgroup-web-font" >
+                    <option value="Black Han Sans">(WEB FONT)Black Han Sans</option>
+                  </optgroup>
                 </select>
               </div>
               <div>
