wc3.json -> json wc3.zip -> zip

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               <div class="form-label m-0"><i class="bi bi-pc-display"></i>/<i class="bi bi-phone"></i> From device</div>
               <form action="" onsubmit="if(this.openfile.files.length){ editor.loadDocument(this.openfile.files[0]).then((r)=>{console.log('loadDocument 완료'); }); this.reset() }else{ alert('Select a file(*.wc3.json | image file )')}; return false;" >
                 <div class="input-group input-group-lg">
-                  <input type="file" class="form-control" name="openfile" accept=".wc3.json,.wc3.zip,image/*">
+                  <input type="file" class="form-control" name="openfile" accept=".json,.zip,image/*">
                 </div>
                 <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json , .wc3.zip 파일이 지원됩니다.</div>
                 <div class="text-end my-1">
