폰트 테스트

--- a/test/index.html
+++ b/test/index.html
@@ -47,6 +47,9 @@
             <a href="./element/test.TextLayer.html">test.TextLayer.html</a>           
           </li>
           <li class="list-group-item">
+            <a href="./element/font.TextLayer.html">font.TextLayer.html</a>           
+          </li>
+          <li class="list-group-item">
             <a href="./element/ui.TextLayer.html">ui.TextLayer.html</a>
           </li>
         </ul>  
